--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -123,3 +123,37 @@ jobs:
         uses: returntocorp/semgrep-action@v1
         with:
           config: auto
+
+  npm-audit:
+    name: npm audit (${{ matrix.project.name }})
+    runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.fork == false
+    strategy:
+      fail-fast: false
+      matrix:
+        project:
+          - name: orchestrator
+            path: services/orchestrator
+          - name: cli
+            path: apps/cli
+          - name: gui
+            path: apps/gui
+    defaults:
+      run:
+        working-directory: ${{ matrix.project.path }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: ${{ matrix.project.path }}/package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run npm audit
+        run: npm audit --audit-level=high
