--- a/charts/oss-ai-agent-tool/templates/orchestrator-deployment.yaml
+++ b/charts/oss-ai-agent-tool/templates/orchestrator-deployment.yaml
@@ -1,31 +1,177 @@
 {{- $root := . -}}
 {{- $fullname := include "oss-ai-agent-tool.fullname" $root -}}
 {{- $postgresUser := $root.Values.postgres.username | default "ossaat" -}}
-{{- $postgresPassword := $root.Values.postgres.password | default "ossaat" -}}
+{{- $postgresPassword := required "postgres.password must be provided" ($root.Values.postgres.password | default "") -}}
 {{- $postgresDatabase := $root.Values.postgres.database | default "ossaat" -}}
 {{- $defaultOrchestratorEnv := dict }}
-{{- $_ := set $defaultOrchestratorEnv "RUN_MODE" $root.Values.runMode -}}
-{{- $_ := set $defaultOrchestratorEnv "MESSAGE_BUS" ($root.Values.messaging.type | default "rabbitmq") -}}
+{{- $orchestratorValueFromEnv := dict }}
+{{- $kafkaRuntime := dict }}
+{{- $messagingType := $root.Values.messaging.type | default "rabbitmq" -}}
+{{- $_ := set $defaultOrchestratorEnv "RUN_MODE" ($root.Values.runMode | default "consumer") -}}
+{{- $_ := set $defaultOrchestratorEnv "MESSAGING_TYPE" $messagingType -}}
+{{- $_ := set $defaultOrchestratorEnv "MESSAGE_BUS" $messagingType -}}
 {{- $_ := set $defaultOrchestratorEnv "REDIS_URL" (printf "redis://%s-redis:6379/0" $fullname) -}}
 {{- $_ := set $defaultOrchestratorEnv "POSTGRES_URL" (printf "postgres://%s:%s@%s-postgres:5432/%s" $postgresUser $postgresPassword $fullname $postgresDatabase) -}}
-{{- if $root.Values.rabbitmq.enabled -}}
-  {{- $rabbitUser := $root.Values.rabbitmq.username | default "guest" -}}
-  {{- $rabbitPassword := $root.Values.rabbitmq.password | default "guest" -}}
-  {{- $rabbitHost := $root.Values.rabbitmq.host | default (printf "%s-rabbitmq" $fullname) -}}
-  {{- $rabbitPort := $root.Values.rabbitmq.port | default 5672 -}}
-  {{- $rabbitScheme := $root.Values.rabbitmq.scheme | default "amqp" -}}
-  {{- $rabbitVhost := $root.Values.rabbitmq.vhost | default "" -}}
-  {{- $vhostSegment := ternary (printf "/%s" ($rabbitVhost | urlquery)) "" (ne $rabbitVhost "") -}}
-  {{- $rabbitUrl := $root.Values.rabbitmq.url | default (printf "%s://%s:%s@%s:%v%s" $rabbitScheme $rabbitUser $rabbitPassword $rabbitHost $rabbitPort $vhostSegment) -}}
-  {{- $_ := set $defaultOrchestratorEnv "RABBITMQ_URL" $rabbitUrl -}}
+{{- if eq $messagingType "rabbitmq" -}}
+  {{- $rabbit := default (dict) $root.Values.rabbitmq -}}
+  {{- $rabbitUrl := $rabbit.url | default "" -}}
+  {{- if $rabbitUrl -}}
+    {{- $_ := set $defaultOrchestratorEnv "RABBITMQ_URL" $rabbitUrl -}}
+  {{- else -}}
+    {{- $rabbitUser := required "rabbitmq.username must be provided when rabbitmq.url is unset" ($rabbit.username | default "") -}}
+    {{- $rabbitPassword := required "rabbitmq.password must be provided when rabbitmq.url is unset" ($rabbit.password | default "") -}}
+    {{- $rabbitHost := $rabbit.host | default (printf "%s-rabbitmq" $fullname) -}}
+    {{- $rabbitPort := $rabbit.port | default 5672 -}}
+    {{- $rabbitScheme := $rabbit.scheme | default "amqp" -}}
+    {{- $rabbitVhost := $rabbit.vhost | default "" -}}
+    {{- $vhostSegment := ternary (printf "/%s" ($rabbitVhost | urlquery)) "" (ne $rabbitVhost "") -}}
+    {{- $rabbitUrlBuilt := printf "%s://%s:%s@%s:%v%s" $rabbitScheme $rabbitUser $rabbitPassword $rabbitHost $rabbitPort $vhostSegment -}}
+    {{- $_ := set $defaultOrchestratorEnv "RABBITMQ_URL" $rabbitUrlBuilt -}}
+  {{- end -}}
 {{- end -}}
-{{- if $root.Values.kafka.enabled -}}
-  {{- $_ := set $defaultOrchestratorEnv "KAFKA_BROKERS" (printf "%s-kafka:9092" $fullname) -}}
+{{- if eq $messagingType "kafka" -}}
+  {{- $kafkaCfg := default (dict) $root.Values.messaging.kafka -}}
+  {{- $defaultBroker := printf "%s-kafka:9092" $fullname -}}
+  {{- $brokers := $kafkaCfg.brokers | default (list $defaultBroker) -}}
+  {{- $_ := set $defaultOrchestratorEnv "KAFKA_BROKERS" (join "," $brokers) -}}
+  {{- if $kafkaCfg.clientId }}
+    {{- $_ := set $defaultOrchestratorEnv "KAFKA_CLIENT_ID" (printf "%v" $kafkaCfg.clientId) -}}
+  {{- end -}}
+  {{- $consumerGroup := $kafkaCfg.consumerGroup | default $kafkaCfg.groupId -}}
+  {{- if $consumerGroup }}
+    {{- $_ := set $defaultOrchestratorEnv "KAFKA_GROUP_ID" (printf "%v" $consumerGroup) -}}
+  {{- end -}}
+  {{- if hasKey $kafkaCfg "consumeFromBeginning" -}}
+    {{- $_ := set $defaultOrchestratorEnv "KAFKA_CONSUME_FROM_BEGINNING" (ternary "true" "false" ($kafkaCfg.consumeFromBeginning | default false)) -}}
+  {{- end -}}
+  {{- if $kafkaCfg.retryDelayMs }}
+    {{- $_ := set $defaultOrchestratorEnv "KAFKA_RETRY_DELAY_MS" (printf "%v" $kafkaCfg.retryDelayMs) -}}
+  {{- end -}}
+  {{- if hasKey $kafkaCfg "ensureTopics" -}}
+    {{- $_ := set $defaultOrchestratorEnv "KAFKA_ENSURE_TOPICS" (ternary "true" "false" ($kafkaCfg.ensureTopics | default true)) -}}
+  {{- end -}}
+  {{- if $kafkaCfg.topicPartitions -}}
+    {{- $_ := set $defaultOrchestratorEnv "KAFKA_TOPIC_PARTITIONS" (printf "%v" $kafkaCfg.topicPartitions) -}}
+  {{- end -}}
+  {{- if $kafkaCfg.replicationFactor -}}
+    {{- $_ := set $defaultOrchestratorEnv "KAFKA_TOPIC_REPLICATION_FACTOR" (printf "%v" $kafkaCfg.replicationFactor) -}}
+  {{- end -}}
+  {{- if $kafkaCfg.topicDefaultConfig -}}
+    {{- $_ := set $defaultOrchestratorEnv "KAFKA_TOPIC_DEFAULT_CONFIG" (printf "%v" $kafkaCfg.topicDefaultConfig) -}}
+  {{- end -}}
+  {{- $compactPatterns := $kafkaCfg.compactTopics | default (list) -}}
+  {{- if gt (len $compactPatterns) 0 -}}
+    {{- $_ := set $defaultOrchestratorEnv "KAFKA_TOPIC_COMPACT_PATTERNS" (join "," $compactPatterns) -}}
+  {{- end -}}
+  {{- $topics := $kafkaCfg.topics | default (dict) -}}
+  {{- $_ := set $defaultOrchestratorEnv "KAFKA_TOPIC_PLAN_STEPS" (printf "%v" ($topics.planSteps | default "plan.steps")) -}}
+  {{- $_ := set $defaultOrchestratorEnv "KAFKA_TOPIC_PLAN_COMPLETIONS" (printf "%v" ($topics.planCompletions | default "plan.completions")) -}}
+  {{- $_ := set $defaultOrchestratorEnv "KAFKA_TOPIC_PLAN_EVENTS" (printf "%v" ($topics.planEvents | default "plan.events")) -}}
+  {{- $_ := set $defaultOrchestratorEnv "KAFKA_TOPIC_PLAN_STATE" (printf "%v" ($topics.planState | default "plan.state")) -}}
+  {{- $deadLetterSuffix := $topics.deadLetterSuffix | default ".dead" -}}
+  {{- $_ := set $defaultOrchestratorEnv "KAFKA_TOPIC_DEAD_LETTER_SUFFIX" (printf "%v" $deadLetterSuffix) -}}
+  {{- $_ := set $defaultOrchestratorEnv "KAFKA_DEAD_LETTER_SUFFIX" (printf "%v" $deadLetterSuffix) -}}
+  {{- $tlsCfg := $kafkaCfg.tls | default (dict) -}}
+  {{- $tlsSecretName := $tlsCfg.secretName | default "" -}}
+  {{- $tlsMountPath := $tlsCfg.mountPath | default "/etc/kafka/tls" -}}
+  {{- $tlsCaFile := $tlsCfg.caFile | default "ca.crt" -}}
+  {{- $tlsCertFile := $tlsCfg.certFile | default "tls.crt" -}}
+  {{- $tlsKeyFile := $tlsCfg.keyFile | default "tls.key" -}}
+  {{- $certPathValue := $tlsCfg.certPath -}}
+  {{- if and (or (eq $certPathValue nil) (eq $certPathValue "")) $tlsSecretName -}}
+    {{- $certPathValue = printf "%s/%s" $tlsMountPath $tlsCertFile -}}
+  {{- end -}}
+  {{- $keyPathValue := $tlsCfg.keyPath -}}
+  {{- if and (or (eq $keyPathValue nil) (eq $keyPathValue "")) $tlsSecretName -}}
+    {{- $keyPathValue = printf "%s/%s" $tlsMountPath $tlsKeyFile -}}
+  {{- end -}}
+  {{- $caPathsValue := "" -}}
+  {{- if $tlsCfg.caPaths }}
+    {{- $caPathsValue = join "," $tlsCfg.caPaths -}}
+  {{- else if $tlsSecretName -}}
+    {{- $caPathsValue = printf "%s/%s" $tlsMountPath $tlsCaFile -}}
+  {{- end -}}
+  {{- if $tlsCfg.enabled }}
+    {{- $_ := set $defaultOrchestratorEnv "KAFKA_TLS_ENABLED" "true" -}}
+    {{- if $caPathsValue }}
+      {{- $_ := set $defaultOrchestratorEnv "KAFKA_TLS_CA_PATHS" $caPathsValue -}}
+    {{- end -}}
+    {{- if $certPathValue }}
+      {{- $_ := set $defaultOrchestratorEnv "KAFKA_TLS_CERT_PATH" $certPathValue -}}
+    {{- end -}}
+    {{- if $keyPathValue }}
+      {{- $_ := set $defaultOrchestratorEnv "KAFKA_TLS_KEY_PATH" $keyPathValue -}}
+    {{- end -}}
+    {{- $rejectUnauthorized := $tlsCfg.rejectUnauthorized | default true -}}
+    {{- $_ := set $defaultOrchestratorEnv "KAFKA_TLS_REJECT_UNAUTHORIZED" (ternary "true" "false" $rejectUnauthorized) -}}
+  {{- end -}}
+  {{- $_ := set $kafkaRuntime "tlsSecretName" $tlsSecretName -}}
+  {{- $_ := set $kafkaRuntime "tlsMountPath" $tlsMountPath -}}
+  {{- $_ := set $kafkaRuntime "tlsEnabled" ($tlsCfg.enabled | default false) -}}
+  {{- $saslCfg := $kafkaCfg.sasl | default (dict) -}}
+  {{- if $saslCfg.mechanism }}
+    {{- $_ := set $defaultOrchestratorEnv "KAFKA_SASL_MECHANISM" (printf "%v" $saslCfg.mechanism) -}}
+  {{- end -}}
+  {{- if $saslCfg.username }}
+    {{- $_ := set $defaultOrchestratorEnv "KAFKA_SASL_USERNAME" (printf "%v" $saslCfg.username) -}}
+  {{- end -}}
+  {{- if $saslCfg.passwordSecretName -}}
+    {{- $_ := set $orchestratorValueFromEnv "KAFKA_SASL_PASSWORD" (dict "secretName" $saslCfg.passwordSecretName "secretKey" ($saslCfg.passwordSecretKey | default "password")) -}}
+  {{- else if $saslCfg.password -}}
+    {{- $_ := set $defaultOrchestratorEnv "KAFKA_SASL_PASSWORD" (printf "%v" $saslCfg.password) -}}
+  {{- end -}}
 {{- end -}}
 {{- $_ := set $defaultOrchestratorEnv "LANGFUSE_BASE_URL" (printf "http://%s-langfuse:3000" $fullname) -}}
 {{- $_ := set $defaultOrchestratorEnv "LANGFUSE_PUBLIC_KEY" "dev-public" -}}
 {{- $_ := set $defaultOrchestratorEnv "LANGFUSE_SECRET_KEY" "dev-secret" -}}
 {{- $_ := set $defaultOrchestratorEnv "OTEL_EXPORTER_OTLP_ENDPOINT" (printf "http://%s-jaeger:4317" $fullname) -}}
+{{- $_ := set $defaultOrchestratorEnv "SSE_MAX_CONNECTIONS_PER_IP" (printf "%v" ($root.Values.orchestrator.sseQuotas.maxConnectionsPerIP | default 4)) -}}
+{{- $_ := set $defaultOrchestratorEnv "SSE_MAX_CONNECTIONS_PER_SUBJECT" (printf "%v" ($root.Values.orchestrator.sseQuotas.maxConnectionsPerSubject | default 2)) -}}
+{{- if $root.Values.vault.enabled -}}
+  {{- $_ := set $defaultOrchestratorEnv "SECRETS_BACKEND" "vault" -}}
+  {{- if $root.Values.vault.address }}
+    {{- $_ := set $defaultOrchestratorEnv "VAULT_ADDRESS" (printf "%v" $root.Values.vault.address) -}}
+  {{- end -}}
+  {{- if $root.Values.vault.namespace }}
+    {{- $_ := set $defaultOrchestratorEnv "VAULT_NAMESPACE" (printf "%v" $root.Values.vault.namespace) -}}
+  {{- end -}}
+  {{- $_ := set $defaultOrchestratorEnv "VAULT_AUTH_METHOD" ($root.Values.vault.authMethod | default "kubernetes") -}}
+  {{- if $root.Values.vault.role }}
+    {{- $_ := set $defaultOrchestratorEnv "VAULT_ROLE" (printf "%v" $root.Values.vault.role) -}}
+  {{- end -}}
+  {{- if eq ($root.Values.vault.authMethod | default "kubernetes") "kubernetes" -}}
+    {{- if $root.Values.vault.kubernetes.jwtPath }}
+      {{- $_ := set $defaultOrchestratorEnv "VAULT_K8S_TOKEN_PATH" (printf "%v" $root.Values.vault.kubernetes.jwtPath) -}}
+    {{- end -}}
+  {{- end -}}
+{{- else -}}
+  {{- $_ := set $defaultOrchestratorEnv "SECRETS_BACKEND" "localfile" -}}
+{{- end -}}
+{{- if $root.Values.auth.oidc.enabled -}}
+  {{- $oidc := $root.Values.auth.oidc -}}
+  {{- $_ := set $defaultOrchestratorEnv "AUTH_OIDC_ENABLED" "true" -}}
+  {{- if $oidc.issuer }}
+    {{- $_ := set $defaultOrchestratorEnv "OIDC_ISSUER_URL" (printf "%v" $oidc.issuer) -}}
+  {{- end -}}
+  {{- if $oidc.clientId }}
+    {{- $_ := set $defaultOrchestratorEnv "OIDC_CLIENT_ID" (printf "%v" $oidc.clientId) -}}
+  {{- end -}}
+  {{- if $oidc.redirectBaseUrl }}
+    {{- $_ := set $defaultOrchestratorEnv "OAUTH_REDIRECT_BASE" (printf "%v" $oidc.redirectBaseUrl) -}}
+  {{- end -}}
+  {{- if $oidc.tenantClaim }}
+    {{- $_ := set $defaultOrchestratorEnv "OIDC_TENANT_CLAIM" (printf "%v" $oidc.tenantClaim) -}}
+  {{- end -}}
+  {{- if $oidc.audience }}
+    {{- $_ := set $defaultOrchestratorEnv "OIDC_AUDIENCE" (printf "%v" $oidc.audience) -}}
+  {{- end -}}
+  {{- $scopes := $oidc.scopes | default (list) -}}
+  {{- $extraScopes := $oidc.extraScopes | default (list) -}}
+  {{- $allScopes := concat $scopes $extraScopes -}}
+  {{- if gt (len $allScopes) 0 -}}
+    {{- $_ := set $defaultOrchestratorEnv "OIDC_SCOPES" (join " " $allScopes) -}}
+  {{- end -}}
+{{- end -}}
 {{- $orchestratorEnv := merge $defaultOrchestratorEnv ($root.Values.orchestrator.env | default dict) -}}
 {{- if and .Values.orchestrator.tls.enabled (not .Values.orchestrator.tls.secretName) -}}
   {{- fail "orchestrator.tls.secretName must be provided when orchestrator.tls.enabled is true" -}}
@@ -48,6 +194,9 @@ spec:
         {{- include "oss-ai-agent-tool.selectorLabels" . | nindent 8 }}
         app.kubernetes.io/component: orchestrator
     spec:
+      {{- if $root.Values.vault.serviceAccountName }}
+      serviceAccountName: {{ $root.Values.vault.serviceAccountName | quote }}
+      {{- end }}
       {{- with .Values.podSecurityContext }}
       securityContext:
         {{- toYaml . | nindent 8 }}
@@ -65,6 +214,20 @@ spec:
           {{- range $key, $value := $orchestratorEnv }}
             - name: {{ $key }}
               value: {{ $value | quote }}
+          {{- end }}
+          {{- range $key, $ref := $orchestratorValueFromEnv }}
+            - name: {{ $key }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ $ref.secretName | quote }}
+                  key: {{ ($ref.secretKey | default "password") | quote }}
+          {{- end }}
+          {{- if and $root.Values.vault.enabled (eq ($root.Values.vault.authMethod | default "kubernetes") "token") $root.Values.vault.tokenSecretName }}
+            - name: VAULT_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: {{ $root.Values.vault.tokenSecretName | quote }}
+                  key: {{ ($root.Values.vault.tokenSecretKey | default "token") | quote }}
           {{- end }}
           {{- if .Values.orchestrator.tls.enabled }}
             {{- $mountPath := .Values.orchestrator.tls.mountPath | default "/etc/orchestrator/tls" -}}
@@ -92,6 +255,12 @@ spec:
           {{- if .Values.orchestrator.tls.enabled }}
             - name: orchestrator-tls
               mountPath: {{ (.Values.orchestrator.tls.mountPath | default "/etc/orchestrator/tls") | quote }}
+              readOnly: true
+          {{- end }}
+          {{- $kafkaTlsSecretName := index $kafkaRuntime "tlsSecretName" -}}
+          {{- if $kafkaTlsSecretName }}
+            - name: kafka-tls
+              mountPath: {{ (index $kafkaRuntime "tlsMountPath" | default "/etc/kafka/tls") | quote }}
               readOnly: true
           {{- end }}
           {{- with .Values.orchestrator.envFrom }}
@@ -135,4 +304,10 @@ spec:
         - name: orchestrator-tls
           secret:
             secretName: {{ .Values.orchestrator.tls.secretName | quote }}
+      {{- end }}
+      {{- $kafkaTlsSecretName := index $kafkaRuntime "tlsSecretName" -}}
+      {{- if $kafkaTlsSecretName }}
+        - name: kafka-tls
+          secret:
+            secretName: {{ $kafkaTlsSecretName | quote }}
       {{- end }}
