--- a/services/orchestrator/package.json
+++ b/services/orchestrator/package.json
@@ -47,6 +47,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.0.0",
+    "jose": "^5.3.0",
     "kafkajs": "^2.2.4",
     "libsodium-wrappers-sumo": "^0.7.15",
     "morgan": "^1.10.0",
