--- a/apps/gui/package.json
+++ b/apps/gui/package.json
@@ -23,7 +23,9 @@
   "devDependencies": {
     "@types/cookie": "^1.0.0",
     "@playwright/test": "^1.43.0",
+    "@testing-library/svelte": "^5.0.0",
     "@sveltejs/adapter-auto": "^3.2.0",
+    "@sveltejs/vite-plugin-svelte": "^6.0.0",
     "@sveltejs/kit": "^2.5.7",
     "@tauri-apps/cli": "^2.0.0",
     "svelte": "^5.0.0",
