--- a/services/orchestrator/package.json
+++ b/services/orchestrator/package.json
@@ -69,6 +69,7 @@
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.30",
+    "@types/pg": "^8.11.10",
     "@types/supertest": "^2.0.16",
     "cross-spawn": "7.0.6",
     "supertest": "^7.1.4",
