--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Scan for secrets with Gitleaks
         uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITLEAKS_OAIT }}
         with:
           args: --source . --redact --verbose
 
